feat: products page added

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="https://media-exp1.licdn.com/dms/image/C4E0BAQEVFOIVYXK0IQ/company-logo_200_200/0/1576084127236?e=1655337600&v=beta&t=a16js4mLJEcmb2hsc5DerP3QN0e2RSCP1UV22fWHphg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
