--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://media-exp1.licdn.com/dms/image/C4E0BAQEVFOIVYXK0IQ/company-logo_200_200/0/1576084127236?e=1655337600&v=beta&t=a16js4mLJEcmb2hsc5DerP3QN0e2RSCP1UV22fWHphg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <!-- <meta name="viewport" content="width=device-width"> -->
+  <link rel="icon"
+    href="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>teamSoft_frontEnd </title>
+  <title>Receitas da Ju </title>
 </head>
 
 <body>
